Tier-5 cleanup: stale comments, mark dead code, two small deletions
Comment-only edits across 19 files:
- Replace stale "Immutable calculator instance" comments in the 6 Methyl
  energy features with a "lazy-initialized" note (matches the post-lazy-init
  refactor).
- Fix wording where comments said "surface atom" but the actual inputs are
  SAS points (PocketShapeFiller, Params).
- Soften the "monomorphic dispatch, JIT-friendly" claim in PocketGridBuilder
  to "bimorphic in the JIT" (two impls of each strategy are registered).
- Rename PredictionPair's "criterium" param to "criterion" (the class was
  renamed long ago).
- Correct the rank-sentinel comment in Evaluation (-1 not 0); rephrase the
  per-site SAS cache-reset comment.
- Fix typo-laden / truncated / stub comments in ConcavityLoader, PUResNetLoader,
  default_rescore.groovy ("FAETURES"), and the PocketGridChimeraXRenderer
  transparency note.
- Correct the test-comment arithmetic in PocketDescriptorsTest and clarify
  the radius source in VolsiteGridPointDescriptorTest.

Mark-as-unused (no deletion):
- FPocketLoader's dead pocket.centroid write (shadowed by getCentroid override).
- EnergyCalculatorConfig.roleRulesCSV field (AtomRole.classify is hardcoded).

Small deletions:
- LoaderParams: drop the 7-line commented-out copy constructor.
- prank.sh: drop the commented-out -XX:+UseConcMarkSweepGC (CMS removed in JDK 14).

Audit file's "Stale comments / dead code" section rewritten to list only the
items still open (each with the reason it was kept).